fix bg whitespace

--- a/app/styles/layout/_sidebar.styl
+++ b/app/styles/layout/_sidebar.styl
@@ -1,9 +1,7 @@
 /* SIDEBAR */
 .main-sidebar
-    background: url(../images/background.jpg) no-repeat
+    background: url(../images/background.jpg) no-repeat center center fixed
     background-size: cover
-    background-attachment: fixed
-    background-position: -20px 0
     padding: 0 1.5rem
     height: 100vh
     +for_breakpoint(mobile)
